fix list markers jump in newest safari version

--- a/frontend/packages/editor/src/blocknote/core/extensions/Blocks/nodes/Block.module.css
+++ b/frontend/packages/editor/src/blocknote/core/extensions/Blocks/nodes/Block.module.css
@@ -360,7 +360,8 @@ NESTED BLOCKS
 
 /* Safari only fix. Safari handles list items display differently than other browsers when there's 
   padding on the content. The padding pushes text down while markers stay at top */
-@supports (-webkit-hyphens: none) and (not (overflow: -webkit-marquee)) and (not (-ms-ime-align: auto)) {
+/* FIXED IN THE NEW SAFARI VERSION. REMOVE THIS FIX FOR NOW */
+/* @supports (-webkit-hyphens: none) and (not (overflow: -webkit-marquee)) and (not (-ms-ime-align: auto)) {
   .blockChildren[data-list-type='Unordered'] > .blockNode > .blockContent,
   .blockChildren[data-list-type='Ordered'] > .blockNode > .blockContent {
     display: flex !important;
@@ -376,7 +377,7 @@ NESTED BLOCKS
     margin-top: 3px !important;
     margin-left: -1em !important;
   }
-}
+} */
 
 /* Unordered */
 /* No list nesting */
